# Hegyi_RVX6Z3_korszam_repo

./: .gitignore  output.txt  proba.cpp
4.feladat/: Deriv.cpp
Der-int/: Deriv.h  Integral.h  Kotel_hossz.cpp  Kotel_hossz.ilk
Ketelemu/: vekt.cpp  vekt.ilk  vekt2.h
Lorenz-butterfly/: Lorenz.cpp  Visualise.py
Lorenz-pillangó/: Butterfly.h  Lorenz.cpp  pyproject.toml
Lorenz-pillangó/lorenz_pillangó/: 2dvis.py  3d.py  Visualise.py  teszt.py  vis_class_test.py
Lorenz-pillangó/tests/: test_lorenz_pillangó.py
